feat: Toolbar and vitals functions

--- a/src/app/pages/meet/actions/actions.component.html
+++ b/src/app/pages/meet/actions/actions.component.html
@@ -21,7 +21,7 @@
                 <nb-action (click)="this.fullscreen = !this.fullscreen">
                     <nb-icon *ngIf="this.fullscreen" icon="expand-outline" nbTooltip="Speaker" nbTooltipPlacement="top">
                     </nb-icon>
-                    <nb-icon *ngIf="!this.fullscreen" icon="collapse-outline" nbTooltip="Mute" nbTooltipPlacement="top">
+                    <nb-icon *ngIf="!this.fullscreen" icon="collapse-outline" nbTooltip="Full Screen" nbTooltipPlacement="top">
                     </nb-icon>
                 </nb-action>
                 <nb-action icon="message-circle-outline" nbTooltip="Chat" nbTooltipPlacement="top" (click)="openWindow()"></nb-action>
