--- a/src/styles.scss
+++ b/src/styles.scss
@@ -136,3 +136,8 @@ nb-route-tabset#patients .route-tabset {
     }
 }
 nb-chat-form{ .dropped-files{ div{ &:nth-child(2n){ display: none; } } } }
+
+.nb-theme-dark nb-chat-message nb-chat-message-text .text {
+  padding: 0.5rem !important;
+  border-radius: 0.5rem;
+}
