--- a/src/app/pages/chat/chat-room/chat-room.component.html
+++ b/src/app/pages/chat/chat-room/chat-room.component.html
@@ -1,5 +1,5 @@
 <nb-chat title="{{chatInfo?.name || 'GMD User'}}" [size]="chatInfo.type == 2 ? 'medium' : 'giant'" [nbSpinner]="isLoading" [ngClass]="{'chat-window': chatInfo.type == 2,'chat-list':chatInfo.type == 1}">
-    <nb-chat-message *ngFor="let message of messages" [type]="message?.type || 'text'" [message]="message.message" [reply]="message.reply" [date]="message.messageTime" [files]="message?.files"></nb-chat-message>
+    <nb-chat-message *ngFor="let message of messages" [type]="message?.type || 'text'" [message]="message.message" [reply]="message.reply" [date]="message.messageTime" [files]="message?.files" [avatar]="message.imageUrl"></nb-chat-message>
     <nb-chat-form (send)="send($event)" showButton="false" dropFiles="true" dropFilePlaceholder="Drop and click send">
     </nb-chat-form>
     <button nbButton status="primary" size="small"></button>
