fix: remove padding space between the buttons

--- a/src/app/pages/meet/components/toolbar/toolbar.component.html
+++ b/src/app/pages/meet/components/toolbar/toolbar.component.html
@@ -25,12 +25,12 @@
                     </nb-icon>
                 </nb-action>
                 <nb-action icon="message-circle-outline" nbTooltip="Chat" nbTooltipPlacement="top" (click)="openWindow()"></nb-action>
-                <nb-action class="p-1">
+                <nb-action>
                     <button nbButton status="success" class="w-100" size="tiny">
                         <nb-icon icon="person-add-outline" class="text-white"></nb-icon>Invite
                     </button>
                 </nb-action>
-                <nb-action class="p-1">
+                <nb-action>
                     <button nbButton status="danger" class="w-100" size="tiny">
                         <nb-icon icon="phone-slash" pack="font-awesome" class="text-white"></nb-icon>Leave
                     </button>
