--- a/src/app/pages/patients/profile/profile.component.html
+++ b/src/app/pages/patients/profile/profile.component.html
@@ -127,8 +127,8 @@
                     <button nbButton status="success" class="m-1" size="small" (click)="callBridge()">
                         <nb-icon icon="phone-call-outline"></nb-icon>{{'kCAllBridge' | translate}}
                     </button>
-                    <button nbButton status="success" class="m-1" size="small">
-                        <nb-icon icon="video-outline" ></nb-icon><a class="text-decoration-none text-reset" [routerLink]="['../../meet/',patientID]">Video Beta</a>
+                    <button nbButton status="success" class="m-1" size="small" (click)="videoBeta()">
+                        <nb-icon icon="video-outline"></nb-icon>Video Beta
                     </button>
                 </div>
             </ng-template>
