--- a/src/app/pages/meet/components/toolbar/toolbar.component.html
+++ b/src/app/pages/meet/components/toolbar/toolbar.component.html
@@ -19,7 +19,7 @@
                 </nb-action>
                 <nb-action icon="video-outline" nbTooltip="Video" nbTooltipPlacement="top"></nb-action>
                 <nb-action (click)="this.fullscreen = !this.fullscreen">
-                    <nb-icon *ngIf="this.fullscreen" icon="expand-outline" nbTooltip="Speaker" nbTooltipPlacement="top">
+                    <nb-icon *ngIf="this.fullscreen" icon="expand-outline" nbTooltip="Full-Screen" nbTooltipPlacement="top" (click)="openFullScreen()">
                     </nb-icon>
                     <nb-icon *ngIf="!this.fullscreen" icon="collapse-outline" nbTooltip="Full Screen" nbTooltipPlacement="top">
                     </nb-icon>
