fix:changes in card body

--- a/src/app/pages/meet/components/vital-metrics/vital-metrics.component.html
+++ b/src/app/pages/meet/components/vital-metrics/vital-metrics.component.html
@@ -1,4 +1,4 @@
-<nb-card accent="danger" class="mt-auto">
+<nb-card accent="danger" class="mt-auto mb-0">
     <nb-card-body>
         <div class="d-inline-flex row px-5" *ngFor="let item of vitalsOriginal">
             <div class="col-md-12 border-right">
